  add parentheses around the if statement body to work around it.

- wxList::Member() now returns book and not a pointer/iterator. This shouldn't
  require any changes as it was always meant to be used for checking for the
  presence of an element in the list only. If you used it as Find(), simple do
  use Find() instead.


Deprecated methods and their replacements
-----------------------------------------

- wxCreateGreyedImage() deprecated, use wxImage::ConvertToGreyscale() instead.
- wxString::GetWriteBuf() and UngetWriteBuf() deprecated, using wxStringBuffer
  or wxStringBufferLength instead.
- wxDIRCTRL_SHOW_FILTERS style is deprecated, filters are alwsys shown if
  specified so this style should simply be removed
- wxDocManager::MakeDefaultName() replaced by MakeNewDocumentName() and
  wxDocument::GetPrintableName() with GetUserReadableName() which are simpler
  to use
- wxXmlProperty class was renamed to wxXmlAttribute in order to use standard
  terminology. Corresponding wxXmlNode methods were renamed to use
  "Attribute" instead of "Property" or "Prop" in their names.
- wxConnection::OnExecute() is not formally deprecated yet but new code should
  use simpler OnExec() version which is called with wxString argument
- Various wxMenuItem methods were deprecated in favour of more consisently
  named new versions:
    . GetLabel() is now GetItemLabelText()
    . GetText() is not GetItemLabel()
    . GetLabelFromText() is now GetLabelText()
    . SetText() is now SetItemLabel()
- wxBrush's, wxPen's SetStyle() and GetStyle() as well as the wxBrush/wxPen
  ctor now take respectively a wxBrushStyle and a wxPenStyle value instead of a
  plain "int style"; use the new wxBrush/wxPen style names (wxBRUSHSTYLE_XXX
  and wxPENSTYLE_XXX) instead of the old deprecated wxXXX styles.
- EVT_GRID_CELL_CHANGE was deprecated, use EVT_GRID_CELL_CHANGED instead if you
  don't veto the event in its handler and EVT_GRID_CELL_CHANGING if you do.